--- a/doc/数据结构/数据结构.md
+++ b/doc/数据结构/数据结构.md
@@ -19,7 +19,7 @@
 #### 队列
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-队列：采用先进先出(FIFO)，新元素总是被插入到链表的尾部，而读取的时候总是从链表的头部开始读取。每次读取一个新元素，就会释放一个元
+队列采用先进先出(FIFO)，新元素总是被插入到链表的尾部，而读取的时候总是从链表的头部开始读取。每次读取一个新元素，就会释放一个元
 素，所谓动态创建，动态释放，因而不存在溢出等问题，由于链表由结构体间接而成，遍历也方便
 
 #### 散列表
