2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/数据结构.md
+++ b/doc/算法数据结构/数据结构.md
@@ -7,8 +7,8 @@
 * [队列](#队列)
 * [散列表](#散列表)
 * [二叉树](#二叉树)
-* [二叉查找树(#二叉查找树)
-* [完全二叉树(完全二叉树)
+* [二叉查找树](#二叉查找树)
+* [完全二叉树](#完全二叉树)
 * [平衡二叉树](#平衡二叉树)
 * [b 树、b+ 树](#b-树-b-树)
 * [红黑树](#红黑树)
@@ -224,7 +224,7 @@ void Levelorder(TreeNode* root) {
 
 - 而对于 b+ 树，是 b 树的一个升级版，相对于 b 树而言 b+ 树更充分利用了节点的空间，让查询速度更加稳定，其速度完全接近二分查找
 
-#### 红黑树(时间复杂度 O(logn))
+#### 红黑树
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 RB-Tree，又称为红黑树，它是一种特殊的二叉查找树，红黑树的每个节点上都有存储位标识该节点的颜色，非红即黑
