2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -1,9 +1,118 @@
 # 算法
 
+* [排序算法](#排序算法)
+* [查找算法](#查找算法)
+* [背包问题](#背包问题)
+* [无锁队列](#无锁队列)
+
 #### 排序算法
+
+- 堆排序【nlogn、nlogn、1、不稳定】
+
+- 快速排序【nlogn、n^2、logn、不稳定】
+
+在区间中随机挑选一个元素作为基准，将小于基准的元素放到基准之前，大于基准的元素放到基准之后，
+**选择一个数作为基准，将比基准小的元素交换到前面，比基准大的元素交换到基准后面，对左右区间重复，直到各区间只有一个数**
+
+一种简单的快排实现
+
+```cpp
+void quicksort(vector<int> v, int low, int high) {
+    if (low >= high) {
+        return ;
+    }
+    // 高低位下标
+    int left = low, right = high;
+    // 基准
+    int base = v[left];
+    while (left < right) {
+        while (left < last && v[right] >= base) {
+            right--;
+        }
+        // 将比基准小的移到前面
+        if (left < right) {
+            v[left++] = v[right];
+        }
+        while (left < right && v[left] <= base) {
+            left++;
+        }
+        // 将比基准大的移到后面
+        if (left < right) {
+            v[right--] = v[left];
+        }
+        v[left] = base;
+        quick(v, low, left - 1);
+        quick(v, left + 1, high);
+    }
+}
+```
+
+- 冒泡排序【n^2、n^2、1、稳定】
+
+冒泡排序思路，遍历序列，相邻两元素比较且交换
+
+```cpp
+void bubblesort(vector<int> v, int size) {
+    bool flags = false;
+    // 剩余一个元素无需比较且交换
+    for (int i = 0; i < size - 1 && !flags; ++i) {
+        flags = true;
+        for (int j = 0; j < size - 1 - i; ++j) {
+            if (v[j] > v[j+1]) {
+                swap(v[j], v[j+1]);
+            }
+        }
+    }
+}
+```
+
+- 插入排序【n^2、n^2、1、稳定】
+
+插入排序思路，**八无序区的第一个元素插入到有序区的合适位置，从第一个元素开始，该元素可以认为已经有序，取出下一个元素，在已排序的元素序列中向后扫描，如
+果该元素大于新元素，将该元素移到下一个位置，重复上述，直到找到已排序的元素小于等于新元素的位置，将新元素插入到该位置后，继续上述步骤**
+
+```cpp
+void insertsort(vector<int> v, int size) {
+
+    // 无序区的第一个元素
+    for (int i = 1; i < size; ++i) {
+        int temp = v[i];
+    }
+
+    // 插入到合适位置
+    for (int j = i - 1; j >= 0; --j) {
+        if (v[j+1] > temp) {
+            v[j+1] = v[j];
+            v[j] = temp;
+        } else
+            break;
+    }
+}
+```
+
+- 桶排序【n、n、m、稳定】
+
+桶排序思路，将值为 i 的元素放入 i 号桶，最后依次将元素倒出来，**设置一个定量数目的数组当作空桶，遍历序列，并且把元素一个一个放入对应的桶中，
+对每个不是空的桶子进行排序，从不是空的桶子里把元素放回原来的序列中**
+
+- 归并排序【nlogn、nlogn、n、稳定】
 
 #### 查找算法
 
+- 二分查找【logn、1、有序】
+
+- 顺序查找【n、1、无序或有序】
+
+- 二叉查找树查找【logn】
+
+- 哈希查找【1，m、无序或有序】
+
 #### 背包问题
 
+- 01 背包
+
+- 多重背包
+
 #### 无锁队列
+
+- CAS 实现无锁队列
