2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -9,6 +9,12 @@
 
 - 堆排序【nlogn、nlogn、1、不稳定】
 
+简单来说，堆排序是一种基于二叉堆结构的排序算法，所谓二叉堆，我们通过完全二叉树来对比
+，只不过相比较完全二叉树而言，二叉堆的所有父节点值都大于或小于它的孩子节点
+
+堆排序方法，把大顶堆堆顶的最大数取出，将剩余的堆继续使用向下调整为大顶堆，再次取出堆顶元素，这个过程持
+续到堆里面只有一个元素为止
+
 - 快速排序【nlogn、n^2、logn、不稳定】
 
 在区间中随机挑选一个元素作为基准，将小于基准的元素放到基准之前，大于基准的元素放到基准之后，
