2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -53,6 +53,56 @@ void quicksort(vector<int> v, int low, int high) {
 }
 ```
 
+**【快排的优化】**，固定基准随机化、三数取中、当排序长度达到一定长度后用插入排序、分割一次后将相同数据不做处理、使用并行或者多线程、使用尾递归优化【即将 logn 降解为更低的时间复杂度】
+
+**【基准随机化算法】**，使用随机数生成函数在一定区间生成一个随机数，范围为 [left, right]，并用此随机数为下标对应的元素 v[rand] 作为基准，并与最后一个元素 v[right] 交换，然后进行与选取最后一个元素
+最为基准，继续快排
+
+优点；基准随机化，将恶劣情况几率减小，随机化快排能达到 nlogn 的时间复杂度
+
+```cpp
+int random(int left, int right) {
+    return rand() % (right - left + 1) + left;
+}
+```
+
+**【三数取中】**，虽然随机化基准的引入能达到 nlogn，但是最坏情况还是 n^2，为了缓解最坏时间，引入三数取中
+
+思路，假设数组被排序的范围为 left 和 right，center =(left+right) / 2，对 a[left]、a[right] 和 a[center] 进
+行适当排序，取中值为中轴，将最小者放 a[left]，最大者放在 a[right]，把中轴元与 a[right-1]交换，并
+在分割阶段将 i 和 j 初始化为 left+1 和 right-2。然后使用双向描述法，进行快排
+
+例子：注意观察 0 4 6
+
+初始数组：6 1 8 9 4 3 5 2 7 0
+
+选取三个中间数：6 1 8 9 4 3 5 2 7 0
+
+对这三个数排序：0 1 8 9 4 3 5 2 7 6
+
+最后中轴与 v[right-1] 交：0 1 8 9 7 3 5 2 4 6
+
+优点：
+
+1.将三元素中最小者被分到 a[left]、最大者分到 a[right]是正确的，因为当快排一趟后，比中轴小的放到左边，而比中轴大的放到右边，这样就在分割的时候把它们分到了
+正确的位置，减少了一次比较和交换。
+
+2.在前面所说的所有算法中，都有双向扫描时的越界问题，而使用这个分割策略则可以解决这个问题。因为 i 向右扫描时，必然会遇到不小于中轴的数 a[right-1]，而 j 在向左扫描时，必然会遇
+到不大于中轴的数 a[left]，这样，a[right-1] 和 a[left] 提供了一个警戒标记，所以不需要检查下标越界的问题。
+
+分析：最佳的划分是将待排序的序列分成等长的子序列，最佳的状态我们可以使用序列的中间的值，也就是第 N/2 个数。可是，这很难算出来，并
+且会明显减慢快速排序的速度。这样的中值的估计可以通过随机选取三个元素并用它们的中值作为枢纽元而得到。事实上，随机性并没有多大的帮助，因此
+一般的做法是使用左端、右端和中心位置上的三个元素的中值作为枢纽元。显然使用三数中值分割法消除了预排序输入的不好情形，并且减少快排大约14%的
+比较次数
+
+**【待排序列达到一定长度后用插排，一般长度为 10】**，在数组中如果有相等元素，那么可以减少不必要的划分
+
+**【尾递归优化】**，优点：如果待排序的序列划分极端不平衡，递归的深度将趋近于 n，而栈的大小是很有限
+的，每次递归调用都会耗费一定的栈空间，函数的参数越多，每次递归耗费的空间也越多。优化后，可以缩减堆栈深度，由原来的 O(n) 缩减为 O(logn)，将会
+提高性能
+
+【尾递归减少递归深度】
+
 - 冒泡排序【n^2、n^2、1、稳定】
 
 冒泡排序思路，遍历序列，相邻两元素比较且交换
