2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -20,6 +20,22 @@
 在区间中随机挑选一个元素作为基准，将小于基准的元素放到基准之前，大于基准的元素放到基准之后，
 **选择一个数作为基准，将比基准小的元素交换到前面，比基准大的元素交换到基准后面，对左右区间重复，直到各区间只有一个数**
 
+快排流程：以 6 为基准
+
+初始数组：6 1 2 7 9 3 4 5 10 8
+
+第一次比较：6 1 2 5 9 3 4 7 10 8
+
+第二次：6 1 2 5 4 3 9 7 10 8
+
+第三次：1 2 3 4 3 6 9 7 10 8
+
+| 初始数组 |  6   |  1   |  2   |  7   |  9   |  3   |  4   |  5   |  10  |  8   |
+| :------: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|  第一次  |  6   |  1   |  2   |  5   |  9   |  3   |  4   |  7   |  10  |  8   |
+|  第二次  |  6   |  1   |  2   |  5   |  4   |  3   |  9   |  7   |  10  |  8   |
+|  第三次  |  1   |  2   |  5   |  4   |  3   |  6   |  9   |  7   |  10  |  8   |
+
 一种简单的快排实现
 
 ```cpp
