2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -180,3 +180,29 @@ void insertsort(vector<int> v, int size) {
 #### 无锁队列
 
 - CAS 实现无锁队列
+
+【数组实现】
+
+使用数组来实现队列是很常见的方法，因为没有内存的分部和释放，一切都会变得简单，实现的思路如下：
+
+1）数组队列应该是一个 ring buffer 形式的数组（环形数组）
+
+2）数组的元素应该有三个可能的值：HEAD，TAIL，EMPTY（当然，还有实际的数据）
+
+3）数组一开始全部初始化成 EMPTY，有两个相邻的元素要初始化成 HEAD 和 TAIL，这代表空队列。
+
+4）EnQueue 操作。假设数据x要入队列，定位 TAIL 的位置，使用 double-CAS 方法把(TAIL, EMPTY) 更新成 (x, TAIL)。需要注意，如果找不到(TAIL, EMPTY)，则说明队列满了。
+
+5）DeQueue 操作。定位 HEAD 的位置，把(HEAD, x)更新成(EMPTY, HEAD)，并把x返回。同样需要注意，如果 x 是 TAIL，则说明队列为空。
+
+算法的一个关键是——如何定位 HEAD 或 TAIL？
+
+1）我们可以声明两个计数器，一个用来计数 EnQueue 的次数，一个用来计数 DeQueue 的次数。
+
+2）这两个计算器使用使用 Fetch&ADD 来进行原子累加，在 EnQueue 或 DeQueue 完成的时候累加就好了。
+
+3）累加后求个模什么的就可以知道 TAIL 和 HEAD 的位置了。
+
+**图示：**
+
+![Add img](https://github.com/Apriluestc/2020/blob/master/pics/queue.png)
