2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -82,13 +82,11 @@ int random(int left, int right) {
 
 例子：注意观察 0 4 6
 
-初始数组：6 1 8 9 4 3 5 2 7 0
-
-选取三个中间数：6 1 8 9 4 3 5 2 7 0
-
-对这三个数排序：0 1 8 9 4 3 5 2 7 6
-
-最后中轴与 v[right-1] 交：0 1 8 9 7 3 5 2 4 6
+|         初始数组         |  6   |  1   |  8   |  9   |  4   |  3   |  5   |  2   |  7   |  0   |
+| :----------------------: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      选取三个中间数      |  6   |  1   |  8   |  9   |  4   |  3   |  5   |  2   |  7   |  0   |
+|      对这三个数排序      |  0   |  1   |  8   |  9   |  4   |  3   |  5   |  3   |  7   |  6   |
+| 最后中轴与v[right-1]交换 |  0   |  1   |  8   |  9   |  7   |  3   |  5   |  2   |  4   |  6   |
 
 优点：
 
