2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -177,9 +177,113 @@ void insertsort(vector<int> v, int size) {
 
 #### 无锁队列
 
-- CAS 实现无锁队列
+##### CAS 实现无锁队列
 
-【数组实现】
+- 链表实现
+
+```cpp
+EnQueue(x) {
+    // 准备新加入的结点数据
+    q = newrecord();
+    q->value = x;
+    q->next = nullptr;
+    do {
+        p = tail; // 取链表尾指针的快照
+    } while (CAS(p->next, nullptr, q) != TRUE); // 如果没有把结点链上，再试
+    CAS(tail, p, q); // 置尾结点
+                
+}
+
+EnQueue(x) {
+    q = newrecord();
+    q->value = x;
+    q->next = NULL;
+    p = tail;
+    oldp = p;
+    do {
+        while (p->next != nullptr)
+            p = p->next;
+    } while (CAS(p.next, NULL, q) != true);
+    CAS(tail, oldp, q); 
+}
+
+DeQueue() {
+    do {
+        p = head;
+        if (p->next == nullptr) {
+            return ERR_EMPTY_QUEUE;
+        } while (CAS(head, p, p->next) != true);
+        return p->next->value;
+    }
+}
+```
+
+![Add img](https://github.com/Apriluestc/2020/blob/master/pics/cas.png)
+
+C++ 11 中的 STL 中的 atomic 类函数
+
+```cpp
+template<classT >
+boolatomic_compare_exchange_weak( std::atomic<T>* obj, T* expected, T desired );
+template<classT >
+boolatomic_compare_exchange_weak( volatilestd::atomic<T>* obj, T* expected, T desired );
+```
+
+- CAS 的 ABA 问题
+
+所谓 ABA 就是：
+
+- 进程 P1 在共享变量中读到值为 A
+- P1 被抢占了，进程 P2 执行
+- P2 把共享变量里的值从 A 改成了 B，再改回到 A，此时被 P1 抢占。
+- P1 回来看到共享变量里的值没有被改变，于是继续执行。
+
+**虽然 P1 以为变量值没有改变，继续执行了，但是这个会引发一些潜在的问题。ABA 问题最容易发生在 lock free 的算
+法中的，CAS 首当其冲，因为 CAS 判断的是指针的地址。如果这个地址被重用了呢，问题就很大了**
+
+举个栗子：
+
+```html
+你拿着一个装满钱的手提箱在飞机场，此时过来了一个火辣性感的美女，然后她很暖昧地挑逗着你，并趁你不注意的时候，把
+用一个一模一样的手提箱和你那装满钱的箱子调了个包，然后就离开了，你看到你的手提箱还在那，于是就提着
+手提箱去赶飞机去了。
+```
+
+这便是 ABA 问题
+
+- 解决 ABA 问题
+
+使用 double-CAS (双保险的 CAS),例如，在 32 位系统上，我们要检查 64 位的内容
+
+1）一次用CAS检查双倍长度的值，前半部是指针，后半部分是一个计数器。
+
+2）只有这两个都一样，才算通过检查，要吧赋新的值。并把计数器累加 1
+
+```html
+这样一来，ABA 发生时，虽然值一样，但是计数器就不一样（但是在32位的系统上，这个计数器会溢出回来又从 1 开始的，这还是会有 ABA 的问题）
+
+当然，我们这个队列的问题就是不想让那个内存重用，这样明确的业务问题比较好解决，论文《Implementing Lock-Free Queues》给出一这么一个方法——使用结点内存引用计数refcnt！
+
+SafeRead(q) {
+    loop:
+        p = q->next;
+        if (p == nullptr) {
+            return p;
+        }
+        Fetch&Add(p->refcnt, 1);
+        if (p == q->next) {
+            return p;
+        } else {
+            Release(p);
+        }
+    goto loop;                    
+}
+
+其中的 Fetch & Add 和 Release 分是是加引用计数和减引用计数，都是原子操作，这样就可以阻止内存被回收了。
+
+```
+
+- 数组实现
 
 使用数组来实现队列是很常见的方法，因为没有内存的分部和释放，一切都会变得简单，实现的思路如下：
 
@@ -204,5 +308,3 @@ void insertsort(vector<int> v, int size) {
 **图示：**
 
 ![Add img](https://github.com/Apriluestc/2020/blob/master/pics/queue.png)
-
-【链表实现】
