--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -171,7 +171,15 @@ void insertsort(vector<int> v, int size) {
 
 #### 背包问题
 
-- 01 背包
+- 01 背包(每个物品只有放和不放)
+
+**问题描述**
+
+【无物品价值】对于背包容量 C，物品重量 W[i]，物品种类 N，能否从其中跳出若干件恰好装满该背包，要求找出满足如上问题的所有解
+
+【有物品价值】对于背包容量 C，物品重量 W[i]，物品价值 V[i]，物品种类为 N，应该选择如何装才使得背包中物品价值最大
+
+**解决思路**
 
 - 多重背包
 
