2020 届秋招笔试面试经验合集

--- a/doc/算法数据结构/算法.md
+++ b/doc/算法数据结构/算法.md
@@ -171,17 +171,9 @@ void insertsort(vector<int> v, int size) {
 
 #### 背包问题
 
-- 01 背包(每个物品只有放和不放)
+【01 背包无价值问题】、【01 背包有价值问题】、【01 背包方案数问题】、【完全背包】、【多重背包】、【完全背包方案数问题】
 
-**问题描述**
-
-【无物品价值】对于背包容量 C，物品重量 W[i]，物品种类 N，能否从其中跳出若干件恰好装满该背包，要求找出满足如上问题的所有解
-
-【有物品价值】对于背包容量 C，物品重量 W[i]，物品价值 V[i]，物品种类为 N，应该选择如何装才使得背包中物品价值最大
-
-**解决思路**
-
-- 多重背包
+[详见背包问题](https://github.com/Apriluestc/2020/tree/master/2020%E5%B1%8A%E7%A7%8B%E6%8B%9B%E7%AC%94%E8%AF%95%E7%BC%96%E7%A8%8B%E9%A2%98%E9%9B%86)
 
 #### 无锁队列
 
