2020 届秋招笔试面试经验合集

--- a/2020秋招面经/腾讯面经.md
+++ b/2020秋招面经/腾讯面经.md
@@ -1,3 +1,7 @@
+* [什么是 SQL 注入？如何预防 SQL 注入？](#什么是-sql-注入如何预防-sql-注入)
+* [fork 和 vfork](#fork-和-vfork)
+* [Web 请求页面的全过程](#web-请求页面的全过程)
+
 ### 什么是 SQL 注入？如何预防 SQL 注入？
 
 **什么是 SQL 注入**
@@ -48,3 +52,34 @@ fork 和 vfork 都是创建一个进程，但是有一下区别
   - alloc_pid 为新进程分配有效的 PID
   - 根据 clone 参数，copy_process 拷贝或共享打开的文件，进程地址空间等
   - copy_process 扫尾并返回指向子进程的指针
+
+### Web 请求页面的全过程
+
+对于 URL 请求页面全过程，具体可分为 5 步
+
+- 先找到 DNS
+
+  - 当一个用户在地址栏输入 www.qq.com 时，DNS解析大致有十个过程
+  - 浏览器先检查自身缓存中有没有被解析过的这个域名对应的 IP 地址，若果有解析结束
+  - 如果浏览器缓存中没有(查找未命中)，浏览器会检查操作系统缓存中有没有对应的已解析过的结果，而操作系统也有一个域名解析的过程，在 windows 中可以通过一个叫 hosts 的文件来设置，
+  - 如果你在这里指定了一个域名对应的 IP 地址，那浏览器会首先使用这个 IP 地址
+  - 如果至此还未命中域名，才会真正请求本地域名服务器(LDNS)，来解析这个域名
+  - 如果 LDNS 还未命中，就直接跳到根域名服务器请求解析
+  - 根域名服务器返回给 LDNS 一个所查询的主域名服务器
+  - 此时 LDNS 再发送请求给上一步返回的根域名服务器
+  - 接受请求的根域名服务器查找并返回这个域名对应的 IP 地址，这个 IP 地址即是网站注册的域名服务器，然后再根据映射关系找到目标 IP 返回给 LDNS
+  - LDNS 缓存这个域名和对应的 IP，并且把解析的结果返回给用户，用户根据 TTL 值缓存到本地缓存中，域名解析过程结束
+
+- 建立 TCP 连接
+
+建立 TCP 连接时需要一个四元组 <源 IP，目的 IP，源端口，目的端口>，此时引发三次握手，TCP/IP 建立连接后，浏览器会向服务器发送 HTTP 请求
+
+**三次握手全过程**
+
+- 首先客户端调用 connect 函数发起连接，向服务器发送连接请求报文，将 SYN 标识位置置 1，序列号 seq 置 x，然后客户端进入 SYN_SEND 状态
+- 服务器对收到来自客户端的 SYN 报文段进行确认，将 SYN 标识置 1，ACK 置 1，序列号 seq 置 y，此时确认号 ack 为 x+1，然后服务端进入 SYN_RECV 状态，这个状态被称为 半连接状态
+- 客户端再对服务器对客户端的连接请求的确认进行确认，将 ACK 置 1，seq 为 x+1，确认号 ack y+1 发向服务器，最后客户端与服务器都进入 ESTABLISHED 状态即连接状态
+
+- 发送 HTTP 报文
+- 接受 HTTP 报文
+- 浏览器解析显示
