--- a/2020秋招面经/腾讯面经.md
+++ b/2020秋招面经/腾讯面经.md
@@ -55,31 +55,48 @@ fork 和 vfork 都是创建一个进程，但是有一下区别
 
 ### Web 请求页面的全过程
 
-对于 URL 请求页面全过程，具体可分为 5 步
+输入地址->域名解析->浏览器向服务器发起 HTTP 请求->服务器处理 HTTP 请求->浏览器处理并显示 html
 
-- 先找到 DNS
+- 浏览器查找域名对应的 IP 地址(DNS 协议)
 
-  - 当一个用户在地址栏输入 www.qq.com 时，DNS解析大致有十个过程
-  - 浏览器先检查自身缓存中有没有被解析过的这个域名对应的 IP 地址，若果有解析结束
-  - 如果浏览器缓存中没有(查找未命中)，浏览器会检查操作系统缓存中有没有对应的已解析过的结果，而操作系统也有一个域名解析的过程，在 windows 中可以通过一个叫 hosts 的文件来设置，
-  - 如果你在这里指定了一个域名对应的 IP 地址，那浏览器会首先使用这个 IP 地址
-  - 如果至此还未命中域名，才会真正请求本地域名服务器(LDNS)，来解析这个域名
-  - 如果 LDNS 还未命中，就直接跳到根域名服务器请求解析
-  - 根域名服务器返回给 LDNS 一个所查询的主域名服务器
-  - 此时 LDNS 再发送请求给上一步返回的根域名服务器
-  - 接受请求的根域名服务器查找并返回这个域名对应的 IP 地址，这个 IP 地址即是网站注册的域名服务器，然后再根据映射关系找到目标 IP 返回给 LDNS
-  - LDNS 缓存这个域名和对应的 IP，并且把解析的结果返回给用户，用户根据 TTL 值缓存到本地缓存中，域名解析过程结束
+  - 请求一旦发起，浏览器首先要做的就是解析这个域名，一般来说，浏览器会首先查看本地的 hosts 文件，看看其中有没有和这个域名对应的规则，如果有的化就直接使用 hosts 文件里面的 IP 地址
+  - 如果本地的 hosts 文件中未命中，浏览器会发出一个 DNS 请求到本地 DNS服务器
+  - 查询你输入网址的 DNS 请求到达本地 DNS 服务器后，本地 DNS 服务器会首先查询它的缓存记录，如果缓存中有此记录，就可以直接返回结果，此过程是递归的方式进行查询，如果没有，本地 DNS 服务器还要向根域名服务器进行查询
+  - 根域名服务器没有记录具体的域名和 IP 地址的对应关系，而是告诉本地 DNS 服务器，你可以去上级域名服务器上查询，并给出域名服务器的地址，这种是迭代的过程
+  - 本地 DNS 服务器继续向域名服务器发出请求，在这个例子中，请求的对象是 .com 域名服务器，.com 服务器收到请求后，也不会返回域名和 IP 地址的映射关系，而是告诉本地 DNS 服务器，你的域名解析服务器的地址
+  - 最后，本地 DNS 服务器向域名的域名解析服务器发出请求，这时就会收到一个域名和 IP 地址的映射关系，本地 DNS 服务器不仅要把 IP 地址返回给用户电脑，还要把这个映射关系保存在缓存中，以备下次访问时，直接返回结果，加快网络访问
 
-- 建立 TCP 连接
+- 浏览器携带 IP 向服务器发器 HTTP 请求
 
-建立 TCP 连接时需要一个四元组 <源 IP，目的 IP，源端口，目的端口>，此时引发三次握手，TCP/IP 建立连接后，浏览器会向服务器发送 HTTP 请求
+拿到域名对应的 IP 地址之后，浏览器会一个随即端口向服务器 80 端口发起 TCP 连接请求，这个连接请求达到服务器端后(通过各种路由选择设备)进入到网卡，然后进入到内核的 TCP/IP 协议栈(用于识别该连接请求，解封包)，还有可能要经
+过防火墙(属于内核的模块)的过滤，最终达到 web 程序，最终建立了 TCP/IP 连接
 
-**三次握手全过程**
+建立了 TCP 连接之后，发起一个 HTTP 请求，一个典型的 HTTP Request Header 一般需要包括请求的方法，例如 GET 和 POST
 
-- 首先客户端调用 connect 函数发起连接，向服务器发送连接请求报文，将 SYN 标识位置置 1，序列号 seq 置 x，然后客户端进入 SYN_SEND 状态
-- 服务器对收到来自客户端的 SYN 报文段进行确认，将 SYN 标识置 1，ACK 置 1，序列号 seq 置 y，此时确认号 ack 为 x+1，然后服务端进入 SYN_RECV 状态，这个状态被称为 半连接状态
-- 客户端再对服务器对客户端的连接请求的确认进行确认，将 ACK 置 1，seq 为 x+1，确认号 ack y+1 发向服务器，最后客户端与服务器都进入 ESTABLISHED 状态即连接状态
+- 服务器的永久重定向 HTTP 响应
 
-- 发送 HTTP 报文
-- 接受 HTTP 报文
-- 浏览器解析显示
+服务器给浏览器响应一个 301 永久重定向响应，这样浏览器就会访问 www.baidu.com 而非 baidu.com
+
+**为什么服务器一定要重定向而不是直接发送用户想看的内容呢？**
+
+网站调整、网页被移到一个新地址、网页扩展名改变(如需要把 .php 改成 .html)、这种情况下，如果
+不做重定向，则用户收藏夹或搜索引擎数据库的旧地址只能让访问的用户得到一条 404 消息，访问流量丧失，再者注册多域名网站，也需要重定向让用户能够访问到这些站点
+
+**那么用 301 还是 302 好呢？**
+
+当一个网站 24-48 小时内临时移动到一个新的位置，这时候就要 302 跳转，而使用 301 跳转的场景就是之前的站点因为某种原因永久的移除掉，然后要到新的地址访问，是永久性的
+
+**【301 使用场景如下】**：域名到期不想续费，想换域名、空间服务器不稳定，换空间的时候、在搜索引擎的搜索结果中出现了不带 www 的域名，而带 www 的域名却没有收录，这个时候可以用 301 重定向来告诉搜索引擎我们的目标域名是哪一个
+
+- Web 应用程序处理 HTTP 请求(以 nginx 为例)
+
+  - nginx 读取配置文件，并寻找静态文件，如 index.php
+  - 把 php 文件交给 fastcgi 进程去处理
+
+后端从在固定的端口接收到 TCP 报文开始，它会对 TCP 连接进行处理，对 HTTP 协议进行解析，并按照报文格式进一步封装成 HTTP Request 对象，供上层使用。
+
+- 浏览器处理并显示 html
+
+在浏览器没有完整的接受全部 html 文档时，它就已经开始显示这个页面了，一般渲染过程
+
+【对于 webkit 来说】解析 html 以构建 dom 树->构建 render 树->布局 render 树->绘制->render 树
