2020 届秋招笔试面试经验合集

--- a/doc/操作系统/操作系统基础概念.md
+++ b/doc/操作系统/操作系统基础概念.md
@@ -14,13 +14,13 @@
 线程是进程的子任务，是 CPU 调度的基本单位，用于保证程序的实时性，实现进程内部的并发，线程是操作系统可识别的最小执行和调度单位，每个线程都独自占用一个虚拟处理器：
 独自的寄存器组，指令计数器和处理器状态，每个线程完成不同任务，但共享同一地址空间(也就是同样的动态内存、映射文件、目标代码等)
 
-### 同步
+### 同步与异步
 
-### 异步
+同步与异步是针对应用程序与内核的交互而言的，同步过程中进程触发 I/O 操作并等待或者轮询的去查看 I/O 操作是否完成，异步过程中进程触发 I/O 操作以后，直接返回，做自己的事情，I/O 交给内核来处理，完成后内核通知进程 I/O 完成
 
-### 阻塞
+### 阻塞与非阻塞
 
-### 非阻塞
+应用进程 I/O 操作时，如果数据未准备好，如果请求立即返回就是非阻塞，不立即返回就是阻塞，简单来说就是做一件事如果不能立即返回，需要等待，就是阻塞，否则就是非阻塞
 
 ### 并发
 
