--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -1,5 +1,5 @@
 * [static 关键字](#static-关键字)
-* [头文件中的 #ifndef/#define/#endif 作用](#头文件中的-#ifndef/#define/#endif-作用)
+* [头文件中的 #ifndef/#define/#endif 作用](#头文件中的-ifndefdefineendif-作用)
 * [#include <file.h> 和 #include "file.h" 的区别](##include-<file.h>-和-#include-"file.h"-的区别)
 * [extern 关键字和 extern "C" 的作用](#extern-关键字和-extern-"C"-的作用)
 * [struct 和 class 的区别](#struct-和-class-的区别)
