--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -1,6 +1,6 @@
 * [static 关键字](#static-关键字)
 * [头文件中的 #ifndef/#define/#endif 作用](#头文件中的-ifndefdefineendif-作用)
-* [#include <file.h> 和 #include "file.h" 的区别](##include-<file.h>-和-#include-"file.h"-的区别)
+* [#include <file.h> 和 #include "file.h" 的区别](#include-file.h-和-include-file.h-的区别)
 * [extern 关键字和 extern "C" 的作用](#extern-关键字和-extern-"C"-的作用)
 * [struct 和 class 的区别](#struct-和-class-的区别)
 * [结构体内存对齐，为什么要内存对齐，结构体大小](#结构体内存对齐为什么要内存对齐结构体大小)
@@ -8,7 +8,7 @@
 * [Linux 内部提供了哪些调试宏](#linux-内部提供了哪些调试宏)
 * [如何判断一段代码是由 C 编译程序还是 C++ 程序编译](#如何判断一段代码是由-c-编译程序还是-c++-程序编译)
 * [什么是引用？声明一个引用应该注意什么？引用和指针有哪些区别？分别在什么场景用](#什么是引用声明一个引用应该注意什么引用和指针有哪些区别分别在什么场景用)
-* [C 和 C++ 的区别？C++ 和 java 的区别？](#c-和-c++-的区别c++-和-java-的区别)
+* [C 和 C++ 的区别？C++ 和 java 的区别？](#c-和-c-的区别c-和-java-的区别)
 * [volatile 是干嘛的，有什么用](#volatile-是干嘛的有什么用)
 * [什么是智能指针？常用的智能指针有哪些？是怎么实现的](#什么是智能指针常用的智能指针有哪些是怎么实现的)
 * [四种强制类型转换](#四种强制类型转换)
