--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -1,7 +1,7 @@
 * [static 关键字](#static-关键字)
 * [头文件中的 #ifndef/#define/#endif 作用](#头文件中的-ifndefdefineendif-作用)
-* [#include <file.h> 和 #include "file.h" 的区别](#include-file.h-和-include-file.h-的区别)
-* [extern 关键字和 extern "C" 的作用](#extern-关键字和-extern-"C"-的作用)
+* [#include <file.h> 和 #include "file.h" 的区别](#include-fileh-和-include-fileh-的区别)
+* [extern 关键字和 extern "C" 的作用](#extern-关键字和-extern-c-的作用)
 * [struct 和 class 的区别](#struct-和-class-的区别)
 * [结构体内存对齐，为什么要内存对齐，结构体大小](#结构体内存对齐为什么要内存对齐结构体大小)
 * [const、#define、枚举常量的区别，相比有何优点](#const#define枚举常量的区别相比有何优点)
