2020 届秋招笔试面试经验合集

--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -18,28 +18,143 @@
 * [函数实现](#函数实现)
 
 ### static 关键字
+
+- static 用法
+
+  - 在函数体内，一个被声明为静态的变量在这一函数调用过程中维持其值不变
+  - 在模块内(函数体外)，一个被声明为静态的变量可以被模块内的所有函数访问，但不能被模块外的其他函数访问，它是一个本地的全局变量
+  - 在模块内，一个被声明为静态的函数只可以被本模块内的其他函数调用，那就是，这个函数被限制在声明它的模块的本地范围内使用
+  - 类内的 static 成员变量属于整个类拥有，类内声明，类体外声明
+  - 类内的 static 成员函数属于整个类拥有，不能包含 this 指针，只能调用 static 成员函数
+
+- static 全局变量与普通全局变量有什么区别？static 普通函数和普通函数有什么区别？static 局部变量和普通局部变量有什么区别？
+
+  - static 全局变量和普通全局变量的区别：static 全局变量只初始化一次，防止在其他文件单元内被引用
+  - static 局部变量和普通局部变量的区别：static 局部变量只被初始化一次，下一次依据上一次的结果值
+  - static 函数与普通函数的区别：static 函数在内存中只有一份，普通函数在每个被调用中维持一份拷贝
+
 ### 头文件中的 #ifndef/#define/#endif 作用
+
+预处理，防止头文件被多次引用，包括 #pragma once 功效相同，但是前者跨平台
+
 ### #include <file.h> 和 #include "file.h" 的区别
+
+前者 #include <file.h> 这种类型是从标准库中寻找头文件，而 #include "file.h" 是从当前工作路径中寻找头文件
+
 ### extern 关键字和 extern "C" 的作用
 ### struct 和 class 的区别
 ### 结构体内存对齐，为什么要内存对齐，结构体大小
 ### const、#define、枚举常量的区别，相比有何优点
+
+- 对于 const 不能将其理解为常数
+
+  - 在定义 const 变量的时候必须初始化
+  - 指针可以是 const 指针，也可以是指向 const 对象的指针
+  - 定义为 const 的形参，记载函数内部是不可以被修改的
+  - 类的成员函数可以被声明为常成员函数，不能修改类的成员变量
+  - 类的成员函数可以返回的是常对象，即被 const 声明的对象
+  - 类的成员变量是常成员变量不能再声明的时候初始化，必须的构造函数的列表进行初始化
+
+```cpp
+例子：
+const int a; // a 是一个常整型数
+int const a; // a 是一个常整形数
+const int* a; // a 是一个指针，什么指针呢，指向常整型数，这个整型数不可修改，但是指针可修改
+int* const a; // a 是一个指针，指向整型数的常指针，指向的整型数可以被修改，但是指针不能修改
+int const* a const; // a 是一个指向常整型数的常指针，两者均不可被改变
+```
+
+- const 如何做到的只读？
+
+这些在编译期间完成，对于内置类型，如 int，编译器使用常数将其替代
+
 ### Linux 内部提供了哪些调试宏
+
+- __FILE__：表示在哪个文件
+- __LINE__：表示在当前多少行
+- __FUNCTION__：表示在执行哪个函数
+
 ### 如何判断一段代码是由 C 编译程序还是 C++ 程序编译
+
+```cpp
+#ifdef __cplusplus
+    cout << "c++" << endl;
+#else
+    cout << "C" << endl;
+#endif
+```
+
 ### 什么是引用？声明一个引用应该注意什么？引用和指针有哪些区别？分别在什么场景用
+
+
+
 ### C 和 C++ 的区别？C++ 和 java 的区别？
+
+- C/C++ 开发语言，C 语言更偏向硬件底层开发，C++ 语言是目前为止我们公认为语法最多的一门语言，C/C++ 在执行速度上要快很多，毕竟
+其他类型语言大都是 C 开发的，更多应用于网络编程和嵌入式编程
+
 ### volatile 是干嘛的，有什么用
+
+- 访问寄存器比访问内存单元要快，编译器会优化减少内存的读取，可能会脏读数据，声明变量为 volatile，编译器
+不会在对该变量的代码优化，仍然从内存中取值，稳定
+
+**volatile 关键字影响编译器的结果，用 volatile 声明的变量表示该变量随时可能发生变化，与该变量有关的运算，不再被编译器优化，以免出错**
+
+- 使用实例(场景)
+  - 并行设备的硬件寄存器(状态寄存器)
+  - 一个中断服务子程序会访问到的非自动变量
+  - 多线程任务中被几个任务共享的变量
+
+- 一个参数可以既是 const 又可以是 volatile 的吗？
+
+可以，只读的状态寄存器，它是 volatile 因为它可能被意想不到的改变，它是 const 因为程序不应该试图修改它
+
+- 一个指针可以是 volatile 的吗
+
+可以，尽管这不常见，当一个中断服务子程序修改一个指向 Buffer 的指针时
+
+```cpp
+例子：
+int square(volatile int* ptr) {
+    return *ptr * *ptr;
+}
+下面是答案：
+这段代码有点变态。这段代码的目的是用来返指针 *ptr 指向值的平方，但是，由于 *ptr 指向一个 volatile 型参数，编译器将产生类似下面的代码：
+int square(volatile int* ptr){
+    int a, b;
+    a = *ptr;
+    b = *ptr;
+    return a * b;
+    
+}
+由于 *ptr 的值可能被意想不到地该变，因此 a 和 b 可能是不同的。结果，这段代码可能返不是你所期望的平方值！正确的代码如下：
+long square(volatile int* ptr) {
+    int a;
+    a = *ptr;
+    return a * a;
+    
+}
+```
+
 ### 什么是智能指针？常用的智能指针有哪些？是怎么实现的
 ### 四种强制类型转换
 ### 前置 ++ 和后置 ++ 的优缺点，哪个是线程安全的
 ### 内联函数和宏函数的区别
 ### explicit 是干嘛的
 ### 函数实现
-- strcpy 函数实现
-- strncpy 函数实现
-- strlen 函数实现
-- strcat 函数实现
-- strncat 函数实现
-- strcmp 函数实现
-- strstr 函数实现
-- string 类实现
+
+**strcpy 函数实现**
+
+**strncpy 函数实现**
+
+**strlen 函数实现**
+
+**strcat 函数实现**
+
+**strncat 函数实现**
+
+**strcmp 函数实现**
+
+**strstr 函数实现**
+
+**string 类实现**
