2020 届秋招笔试面试经验合集

--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -42,7 +42,38 @@
 前者 #include <file.h> 这种类型是从标准库中寻找头文件，而 #include "file.h" 是从当前工作路径中寻找头文件
 
 ### extern 关键字和 extern "C" 的作用
+
+**extern C**
+
+**extern**
+
 ### struct 和 class 的区别
+
+**C 中的 struct**
+
+首先，在面向 C 过程中，这里的 struct 是一种数据类型，那么里面肯定不能定义函数，否则报错
+
+**而 C++ 面向过程认为，数据和数据操作是分开的，C++ 中的 struct 里面可以包含函数，这便是 C 和 C++ 中的 struct 的最大区别**
+
+**C++ 中的 struct 和 class**
+
+首先 C++ 中的 struct 得到了扩充
+
+- struct 可以包含成员函数
+- struct 可以实现继承
+- struct 可以实现多态
+
+**区别**
+
+- 默认的继承访问权限，class 默认是 private 的，struct 默认是 public 的
+- 默认访问权限，struct 作为数据结构的实现体，他默认的数据访问控制是 public 的，而 class 作为对象的实现体，他默认的成员变量访问控制是 private
+- struct 和 class 在使用 {} 上的区别
+  - class 和 struct 如果定义了构造函数的话，都不能使用大括号进行初始化
+  - 如果没有定义构造函数的话，struct 可以使用 {} 进行初始化
+  - 如果没有定义构造函数，且所有的成员变量都是 public 的，class 也可以使用 {} 进行初始化
+  - 考虑到对 C 的兼容，struct 保留了下来
+- class 可用于定义模板参数，而 struct 不可以
+
 ### 结构体内存对齐，为什么要内存对齐，结构体大小
 ### const、#define、枚举常量的区别，相比有何优点
 
