2020 届秋招笔试面试经验合集

--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -75,6 +75,48 @@
 - class 可用于定义模板参数，而 struct 不可以
 
 ### 结构体内存对齐，为什么要内存对齐，结构体大小
+
+**struct/class/union 内存对齐原则**
+
+- 数据成员对齐规则：结构或联合的数据成员，第一个数据放在偏移量为 0 的地方，以后每个数据成员存储的
+起始位置要从该成员大小或者成员子成员的大小(只要该成员有子成员，比如说是数组，结构体等)的整数倍处开始(比如 int 在 32 位为 4 字节对齐，
+则要从 4 的整数倍地址开始存储)，基本类型不包括 struct/union/class
+- 结构体作为成员：如果一个结构里有某些结构体成员，则结构体成员要从内部，最宽基本类型成员的整数倍地址开始存储
+- 收尾工作：也就是 sizeof 之后的结果，必须是其内部最大成员变量的整数倍，不足要补齐，基本类型不包括 struct/class/union
+- sizeof(union)，以结构里面 size 最大元素为 union 的size，因为在某一时刻，union 只有一个数据成员真正的存储在该地址
+
+```cpp
+class Data {
+    char c;
+    int a;
+};
+
+cout << sizeof(Data) << endl;   8
+
+class Data {
+    char c;
+    double a;
+};
+
+cout << sizeof(Data) << endl;   16
+
+class Data {
+    char c;
+    int a;
+    char d;
+};
+
+cout << sizeof(Data) << endl;   12
+
+class Data {
+    char c;
+    char d;
+    int a;
+};
+
+cout << sizeof(Data) << endl;   8
+```
+
 ### const、#define、枚举常量的区别，相比有何优点
 
 - 对于 const 不能将其理解为常数
