2020 届秋招笔试面试经验合集

--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -278,16 +278,49 @@ long square(volatile int* ptr) {
 
 **strcpy 函数实现**
 
-**strncpy 函数实现**
+- 为什么要返回 `char*`
+- 加入考虑 dst 和 src 内存重叠应该怎么实现
+
+```cpp
+char* strcpy(char* dst, const char* src) {
+    assert((dst != nullptr) && (src != nullptr));
+    char* tmp = dst;
+    while ((*dst++ = *src++) != '\0');
+    return tmp;
+}
+```
+
+**memcpy 函数实现**
+
+```cpp
+char* memcpy(char* dst, const char* src, int count) {
+    assert((dsr != nullptr) && (src != nullptr));
+    char* tmp = dst;
+    // 高地址内存重叠
+    if (dst >= src && dst <= src + count - 1) {
+        dst = dst + count - 1;
+        src = src + count - 1;
+        while (count--) {
+            *dst-- = *src--;
+        }
+    } else {
+        while (count--) {
+            *dst++ = *src++;
+        }
+    }
+    return ret;
+}
+```
 
 **strlen 函数实现**
 
-**strcat 函数实现**
-
-**strncat 函数实现**
-
-**strcmp 函数实现**
-
-**strstr 函数实现**
-
-**string 类实现**
+```cpp
+int strlen(const char* str) {
+    assert(str != nullptr);
+    int len = 0;
+    while ((*str++) != '\0') {
+        len++;
+    }
+    return len;
+}
+```
