--- a/doc/C++/语言基础.md
+++ b/doc/C++/语言基础.md
@@ -272,6 +272,16 @@ long square(volatile int* ptr) {
 ### 什么是智能指针？常用的智能指针有哪些？是怎么实现的
 ### 四种强制类型转换
 ### 前置 ++ 和后置 ++ 的优缺点，哪个是线程安全的
+
+- 前置 ++a 表示取 a 的地址，增加它的内容，然后把值放进寄存器中
+- 后置 a++ 表示取 a 的地址，把它的值放入寄存器，然后增加内存中 a 的值
+- 前置 ++ 返回的是引用，后置 ++ 返回的是 const，这意味着前置返回的是左值，后置返回的是右值
+- ++a 和 a++ 的线程安全分为几种情况：
+  - 如果 a 是局部变量，那么是线程安全的，局部变量线程私有
+  - 如果 a 是全局变量，那么是线程不安全的，因为如果是全局变量的话，同一进程中的不同线程都有可能访问到，
+如果有大量的线程执行 a++ 操作，a 变量本身拷贝到每个线程，当同时有两个线程读取线程变量，加入此时是 1 的话
+那么同时执行 a++ 操作，a 将变为 3，因而线程不安全
+
 ### 内联函数和宏函数的区别
 ### explicit 是干嘛的
 ### 函数实现
