2020 届秋招笔试面试经验合集

--- a/doc/C++/内存管理篇.md
+++ b/doc/C++/内存管理篇.md
@@ -1,3 +1,7 @@
+* [STL 中的内存分配策略](#stl-中的内存分配策略)
+* [Linux 进程分配内存的两种方式 brk 和 mmap](#linux-进程分配内存的两种方式-brk-和-mmap)
+* [Linux-malloc 底层实现原理](#linuxmalloc-底层实现原理)
+
 ### STL 中的内存分配策略
 
 ### Linux 进程分配内存的两种方式 brk 和 mmap
