--- a/doc/C++/内存管理篇.md
+++ b/doc/C++/内存管理篇.md
@@ -1,6 +1,15 @@
+* [C++ 内存管理](#c++-内存管理)
 * [STL 中的内存分配策略](#stl-中的内存分配策略)
 * [Linux 进程分配内存的两种方式 brk 和 mmap](#linux-进程分配内存的两种方式-brk-和-mmap)
 * [Linux-malloc 底层实现原理](#linuxmalloc-底层实现原理)
+
+### C++ 内存管理
+
+在 C++ 中，内存分为：栈、堆、自由存储区、全局静态存储区、常量存储区
+
+栈，在执行函数时，函数内局部变量的存储单元都可以在栈上创建，函数执行结果结束也是在栈上进行释放
+
+堆，就是那些由 malloc 等分配的内存块，用 free 来释放
 
 ### STL 中的内存分配策略
 
