2020 届秋招笔试面试经验合集

--- a/2020秋招面经/艾为面经.md
+++ b/2020秋招面经/艾为面经.md
@@ -6,7 +6,7 @@
   - vim：退出不保存和退出保存
   - gdb 调试命令
   - 文件加大小：du -lh、df -h
-  - ps、network、ethtool、netstat、ifconfig 等等
+  - ps、network、ethtool、netstat、ifconfig、git 等等
 - C++ 多态是怎么实现的，构造函数可以为虚函数吗，析构函数呢
 - 虚函数是怎么实现多态的
 - 什么是二叉树
