2020 届秋招笔试面试经验合集

--- a/cpp/md/智能指针.md
+++ b/cpp/md/智能指针.md
@@ -1,3 +1,188 @@
 # 智能指针、原理、注意事项、大坑
 
+### 使用智能指针应该注意的问题
 
+- 不要把一个原生的指针给多个 shared_ptr 或者 unique_ptr 管理
+
+```cpp
+int* ptr = new int(2);
+shared_ptr<int> p1(ptr);
+shared_ptr<int> p2(ptr);
+// p1 p2 析构的时候都会释放 ptr，同一内存被释放多次
+```
+
+我们知道，在使用原生指针对智能指针初始化的时候，智能指针对象都视原生指针为自己管理的资源。换句话意
+思就说：初始化多个智能指针之后，这些智能指针都担负起释放内存的作用。那么就会导致该原生指针会被释放多次！！！
+
+- 不要把 this 指针交给智能指针管理
+
+```cpp
+class Test {
+public:
+    void Do() {
+        m_sp = shared_ptr<Test>(this);
+    }
+private:
+    shared_ptr<Test> m_sp;
+};
+
+int main()
+{
+    Test* t = new Test;
+    shared_ptr<Test> p(t);
+    p->Do();
+    return 0;
+}
+```
+
+以上代码发生了什么事情呢？还是同样的错误。把原生指针 this 同时交付给了 m_sp 和 p 管理，这样
+会导致 this 指针被 delete 两次。
+
+这里值得注意的是：以上所说的交付给m_sp 和 p 管理不对，并不是指不能多个shared_ptr同时占有
+同一类资源。shared_ptr之间的资源共享是通过shared_ptr智能指针拷贝、赋值实现的，因为这样
+可以引起计数器的更新；而如果直接通过原生指针来初始化，就会导致m_sp和p都根本
+不知道对方的存在，然而却两者都管理同一块地方。相当于”一间庙里请了两尊神”
+
+- 如果不是通过 new 得到的动态资源内存请自定义删除器
+
+```cpp
+int main()
+{
+    int* p = (int*)malloc(4 * sizeof(int));
+    shared_ptr<int> sp(p);
+    return 0;
+}
+```
+
+上述代码试图将 malloc 产生的动态内存交给 shared_ptr 管理，显然是有问题的，delete 和 malloc 牛头不对马嘴，所以我们要自定义删
+除器，[](int* p) {free(p);} 传递给 shared_ptr
+
+- 尽量不要使用 get()
+
+```cpp
+int main()
+{
+    shared_ptr<int> sp(new int(4));
+    shared_ptr<int> p(sp.get());
+    return 0;
+}
+```
+
+智能指针设计者之处提供get()接口是为了使得智能指针也能够适配原生指针使用的相关函数。这个设计可
+以说是个好的设计，也可以说是个失败的设计。因为根据封装的封闭原则，我们将原生指针交付给
+智能指针管理，我们就不应该也不能得到原生指针了；因为原生指针唯一的管理者就应该
+是智能指针。而不是客户逻辑区的其他什么代码。
+
+所以我们在使用get()的时候要额外小心，禁止使用get()返回的原生指针再去初始化其他智能指
+针或者释放。(只能够被使用，不能够被管理)。而下面这段代码就违反了这个规定：
+
+- 尽量使用 make_shared，不要把原生指针暴露出来
+
+我们在定义shared_ptr智能指针的时候通常有3种方法：
+
+1.先动态开辟内存，然后用局部变量接受指针。再把指针用于初始化。
+
+2.直接在初始化参数中写new表达式。
+
+3.使用make_shared函数。
+
+实际应用中提倡使用第3中方法，第1种方法将原生指针暴露出来了，如果在外面的代码中不小心将该
+指针delete或者初始化其他的智能指针就会出现条款4的错误，所以这不是一个比较好的方法。第
+2种方法，直接在用new表达式作为实参，这样原生指针就匿名了。然而当你用new创建一个对象的同
+时创建一个shared_ptr时，这时会发生两次动态申请内存：一次是给使用new申请的对象本
+身的，而另一次则是由shared_ptr的构造函数引发的为资源管理对象分配的。与此相反，当你
+使用make_shared的时候，C++编译器只会一次性分配一个足够大的内存，用来保存这个资源
+管理者和这个新建对象。 
+
+下面是3种初始化shared_ptr的方法：
+
+```cpp
+int main()
+{
+    {
+        int* p = new int(4);
+        shared_ptr<int> sp(p);
+    }
+    {
+        shared_ptr<int> sp(new int(3));
+    }
+    {
+        shared_ptr<int> sp = make_shared(3);
+    }
+    return 0;
+}
+```
+
+### shared_ptr 的实现
+
+```cpp
+#include <map>
+
+class SharedPtr {
+public:
+    SharedPtr(int* ptr) {
+        ptr_ = ptr;
+        map_.insert(std::make_pair(ptr_, 1));                    
+    }
+    SharedPtr(const SharedPtr& rhx) {
+        ptr_ = rhx.ptr_;
+        map_[ptr_]++;                    
+    }
+    SharedPtr& operator=(const SharedPtr& rhx) {
+        if (ptr_ == rhx.ptr_) {
+            return *this;                    
+        }
+        if (--map_[ptr_] <= 0 && ptr_ != nullptr) {
+            delete ptr_;
+            ptr_ = nullptr;
+            map_.erase(ptr_);                                            
+        }
+        ptr_ = rhx.ptr_;
+        map_[ptr_]++;
+        return *this;                            
+    }
+    int& operator*() {
+        return *ptr_;
+    }
+    int* operator->() {
+        return ptr_;            
+    }
+    ~SharedPtr() {
+        if (--map_[ptr_] <= 0 && ptr_ != nullptr) {
+            delete ptr_;
+            ptr_ = nullptr;
+            map_.erase(ptr_);                                            
+        }
+    }
+    static std::map<int*, int> map_;
+private:
+    int* ptr_;        
+};
+
+std::map<int*, int> SharedPtr::map_;
+```
+
+### 使用 shared_ptr 的注意事项
+
+- 尽量使用 make_shared
+- 线程不安全
+- 避免循环引用，循环引用会导致引用计数器无法清零，造成无法释放
+
+```cpp
+class Test {
+public:
+    shared_ptr<Test> pre;
+    shared_ptr<Test> next;
+    ~Test() {
+        cout << "~Test()" << this << endl;
+    }
+    int data;
+};
+
+void func() {
+    shared_ptr<Test> sp1(new Test);
+    shared_ptr<Test> sp2(new Test);
+    sp1->next = sp2;
+    sp2->pre = sp1;
+}
+```
